# tinydtls

./: .gitignore  .gitmodules  AutoConf.cmake  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Makefile.contiki  Makefile.dtls  Makefile.in  Makefile.riot  Makefile.tinydtls  README  README.md  alert.h  autogen.sh  ccm.c  ccm.h  config.h  config.h.contiki  config.h.in  configure  configure.ac  configure.in  crypto.c  crypto.h  debug.c  debug.h  dsrv.c  dsrv.h  dtls-client.c  dtls-server.c  dtls.c  dtls.h  dtls_alert.h  dtls_config.h.cmake.in  dtls_config.h.in  dtls_crypto.h  dtls_debug.c  dtls_debug.h  (+28 more)
.github/: build-status.yaml
.github/workflows/: main.yml
aes/: Makefile.in  rijndael.c  rijndael.h  rijndael_wrap.c
doc/: Doxyfile  Doxyfile.in  Makefile.in
ecc/: Makefile.in  ecc.c  ecc.h  test_helper.c  test_helper.h  testecc.c  testfield.c
examples/contiki/: Makefile  dtls-client.c  dtls-server.c
md5/: Makefile.in
platform-specific/: Makefile.in  config-cc2538dk.h  config-sky.h  dtls_hmac_psa.c  dtls_prng_contiki.c  dtls_prng_espidf.c  dtls_prng_lwip.c  dtls_prng_posix.c  dtls_prng_psa.c  dtls_prng_riot.c  dtls_prng_win.c  dtls_prng_zephyr.c  dtls_sha256_psa.c  dtls_sha256_sodium.c  dtls_time_contiki.c  dtls_time_posix.c  dtls_time_riot.c  lwip_platform.h  platform.h  riot_boards.h
sha1/: Makefile.in  confighelp.c  hmac.c  hmac_sha1.c  hmac_sha1.h  hmac_test.c  sha.h
sha2/: Makefile.in  sha2.c  sha2.h  sha2prog.c  sha2speed.c
tests/: CMakeLists.txt  Makefile  Makefile.dtls  Makefile.in  ccm-test.c  ccm-testdata.c  dsrv-test.c  dtls-client.c  dtls-server.c  dtls-test.c  dtls_ciphers_util.c  dtls_ciphers_util.h  netq-test.c  pcap.c  prf-test.c
tests/unit-tests/: Makefile.in  test_ccm.c  test_ecc.c  test_prf.c  testdriver.c
zephyr/: CMakeLists.txt
