#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#
# Copyright (C) 2011 Olaf Bergmann <bergmann@tzi.org>
#
# Permission is hereby granted, free of charge, to any person
# obtaining a copy of this software and associated documentation
# files (the "Software"), to deal in the Software without
# restriction, including without limitation the rights to use, copy,
# modify, merge, publish, distribute, sublicense, and/or sell copies
# of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
# BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
# ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

AC_PREREQ([2.65])
AC_INIT([tinydtls], [0.2.0])
AC_CONFIG_SRCDIR([dtls.c])
dnl AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_RANLIB
AC_PATH_PROG(DOXYGEN, doxygen, [:])
AC_PATH_PROG(ETAGS, etags, [/bin/false])

AC_C_BIGENDIAN

# Checks for libraries.
AC_SEARCH_LIBS([gethostbyname], [nsl])
AC_SEARCH_LIBS([socket], [socket])
dnl AC_CHECK_LIB([dl], [dlopen])

AC_ARG_WITH(debug,
  [AS_HELP_STRING([--without-debug],[disable all debug output and assertions])],
  [CPPFLAGS="${CPPFLAGS} -DNDEBUG"], 
  [])

AC_ARG_WITH(dtls12,
  [AS_HELP_STRING([--with-dtls12],[use DTLS 1.2])],
  [CPPFLAGS="${CPPFLAGS} -DDTLSv12"])

AC_ARG_WITH(protocol_demux,
  [AS_HELP_STRING([--without-protocol-demux],
    [disable protocol demultiplexing (i.e. forbid cleartext on DTLS-enabled sockets)])]
)

AS_IF([test "x$with_protocol_demux" = "xno"],
 [AC_DEFINE([DSRV_NO_PROTOCOL_DEMUX], [],
   [Define if you do not want intermix cleartext with DTLS])
  CPPFLAGS="${CPPFLAGS} -DDSRV_NO_PROTOCOL_DEMUX"]
)

AC_ARG_WITH(md5,
  [AS_HELP_STRING([--without-md5],[disable use of MD5])],
  [], 
  [CPPFLAGS="${CPPFLAGS} -DWITH_MD5" OPT_OBJS="${OPT_OBJS} md5/md5.o"])

AC_ARG_WITH(sha1,
  [AS_HELP_STRING([--without-sha1],[disable use of SHA1])],
  [], 
  [CPPFLAGS="${CPPFLAGS} -DWITH_SHA1" OPT_OBJS="${OPT_OBJS} sha1/sha1.o"])

AC_ARG_WITH(sha256,
  [AS_HELP_STRING([--without-sha256],[disable use of SHA256])],
  [], 
  [CPPFLAGS="${CPPFLAGS} -DWITH_SHA256" OPT_OBJS="${OPT_OBJS} sha2/sha2.o"])

dnl AC_ARG_WITH(sha384,
dnl   [AS_HELP_STRING([--with-sha384],[enable use of SHA384])],
dnl   [CPPFLAGS="${CPPFLAGS} -DWITH_SHA384"])
dnl 
dnl AC_ARG_WITH(sha512,
dnl   [AS_HELP_STRING([--with-sha512],[enable use of SHA512])],
dnl   [CPPFLAGS="${CPPFLAGS} -DWITH_SHA512"])

AC_SUBST(OPT_OBJS)

# Checks for header files.
AC_CHECK_HEADERS([assert.h arpa/inet.h fcntl.h inttypes.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/param.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_SIZE_T
dnl AC_TYPE_UINT8_T
dnl AC_TYPE_UINT16_T
dnl AC_TYPE_UINT32_T
dnl AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset select socket strdup strerror])

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 doc/Doxyfile
                 tests/Makefile
		 md5/Makefile
		 sha1/Makefile
		 sha2/Makefile
		 aes/Makefile])
AC_OUTPUT
